<resources>
    <string name="app_name">RestaurantClientApplication</string>
    <string name="tamagotchi">Tamagotchi</string>
    <string name="create_account">СОЗДАТЬ АККАУНТ</string>
    <string name="logo">logo</string>
    <string name="login">ВОЙТИ</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_phone">Номер телефона</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Неверный номер телефона</string>
    <string name="invalid_password">Пароль должен быть >5 символов</string>
    <string name="auth_invalid_password">Неверный пароль</string>
    <string name="account_already_exist">Пользователь с введенным номер уже зарегистрирован</string>
    <string name="create_account_error">Не удалось создать аккаунт</string>
    <string name="login_failed">"Авторизация провалена"</string>
    <string name="create_success">"Создание аккаунта успешно. Выполните авторизацию."</string>
    <string name="title_menu">Меню</string>
    <string name="title_orders">Заказы</string>
    <string name="title_restaurants">Рестораны</string>
    <string name="restaurants">Рестораны</string>
    <string name="menu">Меню</string>
    <string name="order">Заказ</string>
    <string name="still">Еще</string>
    <string name="make_order">Сделать заказ</string>
    <string name="number_of_guests">Количество гостей:</string>
    <string name="make_an_order">Произвести заказ</string>
    <string name="none">None</string>
    <string name="test_date">00.00.0000</string>
    <string name="test_time">00:00</string>
    <string name="start_guest_count">1</string>
    <string name="start_item_menu_count">0</string>
    <string name="price">Цена:</string>
    <string name="name_of_dish">Name of dish</string>
    <string name="description_of_the_dish">Description of the dish</string>
    <string name="quantity">Количество:</string>
    <string name="price_value">1000</string>
    <string name="currency">руб.</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="error">Ошибка</string>
    <string name="primarily_select_restaurant">Сначала выберите ресторан.</string>
    <string name="ok">Ок</string>
    <string name="total">Итого:</string>
    <string name="order_detail">Детали заказа</string>
    <string name="address">Адрес:</string>
    <string name="date">Дата:</string>
    <string name="time">Время:</string>
    <string name="selected_menu">Выбранное меню:</string>
    <string name="orderSuccessCreated">Заказ создан. Мы вас ожидаем.</string>
    <string name="orderErrorCreated">Создание заказа не удалось.</string>
    <string name="name">Name</string>
    <string name="leave_a_review">Оставить отзыв</string>
    <string name="order_number">Заказ №</string>
    <string name="placeholderTime">00.00.0000 00:00</string>
    <string name="placeholderOrderState">В ожидании</string>
    <string name="orderStateText">Состояние:</string>
    <string name="logOut">Выйти</string>
    <string name="logOutConfirm">Вы действительно хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="write_feedback">Напишите отзыв</string>
    <string name="no_place_status">Нет мест</string>
    <string name="payment_madeing_status">Оплата</string>
    <string name="payment_error_status">Ошибка оплаты</string>
    <string name="confirmed_status">Подтвежден</string>
    <string name="preparing_status">Идет подготовка</string>
    <string name="prepared_status">Подготовлен</string>
    <string name="completed_status">Завершен</string>
    <string name="staff_notified_status">Персонал оповещен</string>
    <string name="edit">Изменить</string>
</resources>
