<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_restaurants">

    <fragment
        android:id="@+id/navigation_restaurants"
        android:name="com.tamagotchi.restaurantclientapplication.ui.restaurants.RestaurantsFragment"
        android:label="@string/title_restaurants"
        tools:layout="@layout/fragment_restaurants" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.tamagotchi.restaurantclientapplication.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.tamagotchi.restaurantclientapplication.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

</navigation>
