<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_image"
    tools:context=".ui.start.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/ravie"
        android:gravity="center_horizontal"
        android:text="@string/tamagotchi"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_height="108dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="324dp"
        android:layout_height="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="324dp"
        android:layout_height="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>